[gd_scene load_steps=10 format=3 uid="uid://0wwoxq8qnmd4"]

[ext_resource type="Script" uid="uid://c80oooofhsq1o" path="res://scripts/ending.gd" id="1_5amew"]
[ext_resource type="Texture2D" uid="uid://chfd2edk5l1dn" path="res://assets/cutscene/bg.png" id="2_5amew"]
[ext_resource type="FontFile" uid="uid://brtd07w6lobng" path="res://assets/fonts/PixelifySans-Regular.ttf" id="2_t1k4y"]
[ext_resource type="Texture2D" uid="uid://8wqh4rddc1ev" path="res://assets/textures/again.png" id="3_3v48n"]
[ext_resource type="Script" uid="uid://d4hdj8kxlemgf" path="res://scripts/restart.gd" id="3_t1k4y"]
[ext_resource type="AudioStream" uid="uid://cj582yv6oex0r" path="res://assets/audio/sfx/ui_hover.mp3" id="5_o5uye"]
[ext_resource type="AudioStream" uid="uid://ehencagomqts" path="res://assets/audio/sfx/ui_click.mp3" id="6_e6d8c"]

[sub_resource type="LabelSettings" id="LabelSettings_1snb8"]
font = ExtResource("2_t1k4y")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_7g6bj"]
font = ExtResource("2_t1k4y")
font_size = 24

[node name="Ending" type="Node2D"]
script = ExtResource("1_5amew")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5amew")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_t1k4y")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.815686)

[node name="lost" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.353906
anchor_top = 0.265278
anchor_right = 0.646875
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2
text = "Run Successful"
label_settings = SubResource("LabelSettings_1snb8")
metadata/_edit_use_anchors_ = true

[node name="score" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -61.0
offset_right = 30.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
text = "score: 0"
label_settings = SubResource("LabelSettings_7g6bj")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
modulate = Color(100, 100, 100, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -37.0
offset_right = 100.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3v48n")

[node name="restart" type="Button" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -22.0
offset_right = 82.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_t1k4y")
theme_override_font_sizes/font_size = 24
text = "AAAAAAAAAAA

AAAAAAAAAAA
"
flat = true
expand_icon = true

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_o5uye")
volume_db = 4.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_e6d8c")
volume_db = 5.0

[connection signal="finished" from="CanvasLayer/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="mouse_entered" from="CanvasLayer/Control/restart" to="CanvasLayer/Control" method="_on_restart_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/restart" to="CanvasLayer/Control" method="_on_restart_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/restart" to="CanvasLayer/Control" method="_on_restart_pressed"]
